# portfolio

./: .env  .gitignore  BLOG_SETUP.md  Dockerfile  LICENSE  next.config.mjs  package-lock.json  package.json  pm-system.md  pnpm-lock.yaml  prisma.config.ts  tailwind.config.ts
.kamal/: secrets  secrets-common
.kamal/hooks/: post-proxy-reboot.sample
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
app/admin/: layout.tsx  page.tsx
app/blog/: layout.tsx  page.tsx
app/ferric/: page.tsx
app/harveyregistry/: layout.tsx  page.tsx
app/portfolio/: layout.tsx  page.tsx
app/up/: route.ts
components/admin/: AdminLink.tsx  AdminNav.tsx  DashboardClock.tsx  HeatmapTweakContext.tsx  HeatmapTweakMenu.tsx  WorkToDo.tsx
components/app/: ScrapNavLink.tsx  contactForm.tsx  footer.tsx  header.tsx  scrapbookElements.tsx
components/ui/: AnimatedLogo.tsx  ConfirmDialog.tsx  GenericFormField.tsx  PageTransition.tsx  SpinnerAnimation.tsx  button.tsx  card.tsx  form.tsx  input.tsx  section.tsx  separator.tsx  toast-context.tsx  toast.tsx  underline-link.tsx
config/: deploy.production.yml  deploy.yml
config/caddy/: Caddyfile
hooks/: useElementDimensions.ts
lib/: akaunting.ts  blog.ts  db.ts  receipt-pdf.tsx  time-range.ts  time-report-pdf.tsx  utils.ts
lib/actions/: authOptions.ts  (+2 more)
prisma/: db.db  schema.prisma  seed.ts
public/: app-ads.txt  robots.txt
scripts/: compile-blog.ts  import-portfolio.ts
types/: blog.ts  gsap-offset.d.ts  page-flip.d.ts
wasm/: .gitignore
wasm/clipper-offset/: Cargo.toml
wasm/clipper-offset/src/: lib.rs
(+142 files in other folders)
